src/pretty/snapshots/typstyle_core__pretty__tests__to_doc-3.snap
---
source: src/pretty/mod.rs
expression: "to_doc(test.into(), false)"
---
[
    "123",
    Hardline,
    "4567",
    Hardline,
    "789",
    Hardline,
]
